force-app/main/default/objects/Meeting_WF_Status__c/Meeting_WF_Status__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Status</label>
    <nameField>
        <displayFormat>WFS-{00000}</displayFormat>
        <label>Meeting WF Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>