force-app/main/default/objects/Meeting_WF_Status__c/fields/Is_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Is_Terminal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meeting WF config</description>
    <label>Terminal</label>
    <type>Checkbox</type>
</CustomField>