force-app/main/default/objects/Meeting_WF_Status__c/fields/Status_Label__c.field-meta.xml
<CustomField>
    <fullName>Status_Label__c</fullName>
    <description>Meeting WF config</description>
    <label>Status Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>