force-app/main/default/objects/Meeting_WF_Status__c/fields/Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Status_Value__c</fullName>
    <description>Meeting WF config</description>
    <label>Status Value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>